# soong-digest

./: Cargo.toml  LICENSE
benches/: integration.rs
src/: ansi.rs  error.rs  item.rs  main.rs  output.rs  warning.rs
tests/: integration.rs
